@@ -1,3 +1,6 @@
+2004-11-30 Magnus Hagdorn
+ * glimmer_temp.f90: fix minor bug and some clean-ups
+
 2004-11-29 Magnus Hagdorn
  * glide_types.f90: added some factors for sliding heating
  * glimmer_temp.f90: added basal heat flux due to sliding
